--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-top: 1rem;
 }
-.user-links a {
-  margin: 0 0.5rem;
+.user-links__link {
+  margin: 0.5rem 0;
   text-decoration: none;
 }
 
