--- a/scss/components/user-links.scss
+++ b/scss/components/user-links.scss
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-top: 1rem;
-  a {
-    margin: 0 0.5rem;
+
+  &__link {
+    margin: 0.5rem 0;
     text-decoration: none;
   }
 }
